[gd_scene load_steps=3 format=2]

[ext_resource path="res://Landscape.tscn" type="PackedScene" id=1]
[ext_resource path="res://TetrisBoard.gd" type="Script" id=2]

[node name="TetrisBoard" type="Node2D"]
script = ExtResource( 2 )

[node name="Landscape" parent="." instance=ExtResource( 1 )]

[node name="InputTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="TickdownTimer" type="Timer" parent="."]
autostart = true

[node name="LevelIncreaseTimer" type="Timer" parent="."]
wait_time = 25.0
autostart = true

[connection signal="timeout" from="TickdownTimer" to="." method="_on_TickdownTimer_timeout"]
[connection signal="timeout" from="LevelIncreaseTimer" to="." method="decrement_tickdown_timer"]
